--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "fedipress-chat-pwa",
   "version": "0.1.0",
   "private": true,
+  "homepage": "./public",
   "dependencies": {
     "@chatscope/chat-ui-kit-react": "^1.10.1",
     "@chatscope/chat-ui-kit-styles": "^1.4.0",
@@ -18,10 +19,12 @@
     "react-dom": "^18.2.0",
     "rxjs": "^7.8.1",
     "typescript": "^4.9.5",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "workbox": "^0.0.0"
   },
   "devDependencies": {
-    "react-scripts": "4.0.3"
+    "react-scripts": "^5.0.1",
+    "webpack": "^5.90.3"
   },
   "scripts": {
     "start": "react-scripts start",
